--- a/capstone/model/config.yaml
+++ b/capstone/model/config.yaml
@@ -1,9 +1,9 @@
 #file paths for the folllowing
 file_paths:
-  dataset: "live-model/nmap-training-data-02.csv" # labled data
+  dataset: "http-traffic.csv" # labled data
   captured_traffic: "CSV-Files/tcp_traffic.csv" #normal traffic
-  trained_model: "live-model/Models/Training/nmap-trained_model.keras" # labled model
-  inference_model: "live-model/Models/Inferance/nmap-inference_model.keras" # inferance mode
+  trained_model: "Models/Training/metasploit-traffic.keras" # labled model
+  inference_model: "Models/Inferance/metasploit-traffic.keras" # inferance mode
 
 
 #feature space for model
@@ -16,24 +16,27 @@ feature_space:
     #- name: "ip.src"
     #  type: "string"
     #  num_oov_indices: 1
-    - name: "tcp.dstport"
-      type: "integer"
-      num_oov_indices: 1
-    - name: "tcp.srcport"
-      type: "integer"
-      num_oov_indices: 1
+    #- name: "tcp.dstport"
+    #  type: "integer"
+    #  num_oov_indices: 1
+    #- name: "tcp.srcport"
+    #  type: "integer"
+    #  num_oov_indices: 1
     - name: "tcp.window_size_value"
       type: "integer"
       num_oov_indices: 1
     - name: "tcp.flags"
       type: "string"
       num_oov_indices: 1
+    - name: "tcp.options.mss_val"
+      type: "integer"
+      num_oov_indices: 1
  #crosses / features that interact with each other
-  crosses:
-    - feature_names: ["tcp.srcport", "tcp.dstport"]
-      crossing_dim: 64
-    - feature_names: ["tcp.window_size_value", "tcp.flags"]
-      crossing_dim: 64
+  #crosses:
+  #  - feature_names: ["tcp.srcport", "tcp.dstport"]
+  #    crossing_dim: 64
+  #  - feature_names: ["tcp.window_size_value", "tcp.flags"]
+  #    crossing_dim: 64
 
 model_config:
   dense_layer1_units: 64
